test: UnitService 단위 테스트 추가, 기존 테스트 UnitServiceIntegrationTest 클래스로 이동